# connect-reports

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  reports.json  sonar-project.properties  tox.ini
.github/workflows/: build.yml
reports/: billing_requests.py  connect_reports.py  fulfillment_requests.py  fulfillment_requests_failed.py  utils.py
reports/billing_requests/: Readme.md  entrypoint.py  template.xlsx
reports/billing_requests_line_item/: Readme.md  entrypoint.py
reports/contract_list/: Readme.md  entrypoint.py  template.xlsx
reports/customers_list/: Readme.md  entrypoint.py  template.xlsx
reports/executive_fullfilment_requests/: Readme.md  constants.py  entrypoint.py
reports/fulfillment_requests/: Readme.md  entrypoint.py  template.xlsx
reports/fulfillment_requests_failed/: Readme.md  entrypoint.py  template.xlsx
reports/fulfillment_requests_line_item/: Readme.md  entrypoint.py
reports/helpdesk/: Readme.md  entrypoint.py
requirements/: dev.txt  test.txt
templates/: fulfillment_requests_list.xlsx
tests/: conftest.py  test_billing_requests.py  test_billing_requests_line_item.py  test_connect_reports.py  test_contracts_list.py  test_customer_list.py  test_executive_fullfilment_requests.py  test_fulfillment_requests.py  test_fulfillment_requests_failed.py  test_fulfillment_requests_line_item.py  test_helpdesk.py  test_listing_list.py  test_listing_requests.py  test_product_catalog.py  test_sla.py  test_subscription_list.py  test_tier_configuration_list.py  test_tier_configuration_requests.py  test_usage_in_subscription.py
(+48 files in other folders)
